1998-11-30  Elliot Lee  <sopwith@cuc.ml.org>

	* {gdk,gtk}/*.c: Make read-only data structures "static const" to
	allow them to be shared, mainly including (but not limited to) the
	GtkTypeInfo structures for each class.

	* gtk/gtkfilesel.c: Add /net to the "leave me alone" directory listing.

Mon Nov 30 12:17:10 1998  Jeff Garzik  <jgarzik@pobox.com>

	* gtk/gtksignal.c:
	Surround debug variable with #ifdef to silence gcc.

	* gtk/gtknotebook.c (gtk_notebook_reorder_child):
	Added initializer to quiet gcc warning.
	Added assertion to check for null pointer deref.

Mon Nov 30 10:11:29 1998  Tim Janik  <timj@gtk.org>

	* gtk/testgtkrc: merged testgtkrc with the pre-themes one, removed
 	system specific includes.

	* gtk/gtksignal.c: asured that stop and restart emissions are also
 	checked and processed for not connected objects. fixed up restart
	emission administration. invoke emission hooks after emission, hooks
	are not supposed to muck around with the current emission, and
	may also not cause emission restarts. fixed up stop emission
	administration.

Mon Nov 30 06:20:36 1998  Tim Janik  <timj@gtk.org>

	* gtk/testgtk.c: added an event watcher for enter/leave based on
	signal emission hooks.

	* gtk/gtkobject.c (gtk_object_class_init): made GtkObject::destroy a
	GTK_RUN_NO_HOOKS signal.

	* gtk/gtksignal.h: 
	* gtk/gtksignal.c: implemented emission hooks, new hooks can be added
	to a signal with gtk_signal_add_emission_hook or
	gtk_signal_add_emission_hook_full, and can be removed again with
	gtk_signal_remove_emission_hook.

	* gtk/gtkenums.h: remove GTK_RUN_MASK, since it doesn't represent
	an appropriate mask for signal runtypes for a long time now.
	added GTK_RUN_NO_HOOKS value, which is used to flag signals
	that do not allow the running of signal hooks.

1998-11-26  Michael Krause  <m.krause@tu-harburg.de>

        * gtk/gtknotebook.c (gtk_notebook_switch_page): made 'page_num'
        argument a gint: switch_page signal delivers valid page numbers